Deployments/slave02-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: slave02
  labels:
    k8s-app: hadoop
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: nvidia.com/gpu.product
            operator: In
            values:
            - NVIDIA-L4
  nodeSelector:
    topology.kubernetes.io/region: us-west
    topology.kubernetes.io/zone: fullerton
  volumes:
  - name: config-volume
    persistentVolumeClaim:
      claimName: shared-pvc
  containers:
  - name: slave02
    image: "gitlab-registry.nrp-nautilus.io/focegueda/hadoop-test/pysparktorch:latest"
    resources:
      limits:
        memory: 24Gi
        cpu: 10000m
        nvidia.com/gpu: 1
      requests:
        memory: 24Gi
        cpu: 10000m
        nvidia.com/gpu: 1
    ports:
    - containerPort: 8088
      hostPort: 8088
      protocol: TCP
    - containerPort: 9864
      hostPort: 9864
      protocol: TCP
    - containerPort: 9000
      hostPort: 9000
      protocol: TCP
    - containerPort: 9870
      hostPort: 9870
      protocol: TCP
    - containerPort: 8042
      hostPort: 8042
      protocol: TCP
    - containerPort: 9868
      hostPort: 9868
      protocol: TCP
    - containerPort: 10020
      hostPort: 10020
      protocol: TCP
    - containerPort: 19888
      hostPort: 19888
      protocol: TCP
    - containerPort: 4040
      hostPort: 4040
      protocol: TCP
    - containerPort: 7077
      hostPort: 7077
      protocol: TCP
    - containerPort: 7078
      hostPort: 7078
      protocol: TCP
    - containerPort: 8080
      hostPort: 8080
      protocol: TCP
    - containerPort: 8081
      hostPort: 8081
      protocol: TCP
    - containerPort: 15342
      hostPort: 15342
      protocol: TCP
    volumeMounts:
    - name: config-volume
      mountPath: /config
    command: ["bash", "-c"]
    args: [
      "apt-get install libxcb-xinerama0 -y; \
       apt install libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0 libxcb-xkb1 libxkbcommon-x11-0 -y; \
       echo \"export QT_DEBUG_PLUGINS=1\" >> /root/.bashrc; \
       echo \"export QT_QPA_PLATFORM_PLUGIN_PATH=/usr/local/miniconda3/lib/python3.12/site-packages/PyQt5/Qt5/plugins/platforms\" >> /root/.bashrc; \
       source /usr/local/miniconda3/bin/activate; \
       conda install seaborn -y; \
       conda install matplotlib -y; \
       conda install scikit-learn -y; \
       conda install pyqt -y; \
       echo \"y\"| pip install pyqt5; \
       conda install -c conda-forge libxcb -y; \
       echo \"y\" | pip install torchsummary ; \
       echo 'Reloading bashrc'; \
       . /root/.bashrc; \
       /usr/sbin/sshd; \
       echo 'Checking for NVIDIA devices'; \
       if ls /dev | grep -q 'nvidia[0-9]*'; then \
         echo 'NVIDIA devices found, appending configuration to container-executor.cfg'; \
         echo '[docker]' >> $HADOOP_HOME/etc/hadoop/container-executor.cfg; \
         echo \"docker.allowed.devices=/dev/nvidia-uvm,/dev/nvidia-uvm-tools,$(ls /dev | grep 'nvidia[0-9]*' | tr '\n' ',' | sed 's/,$//'),/dev/nvidiactl\" >> $HADOOP_HOME/etc/hadoop/container-executor.cfg; \
         echo 'docker.allowed.ro-mounts=nvidia_driver_550.127.05' >> $HADOOP_HOME/etc/hadoop/container-executor.cfg; \
         echo 'docker.allowed.runtimes=nvidia' >> $HADOOP_HOME/etc/hadoop/container-executor.cfg; \
       else \
         echo 'NVIDIA devices not found'; \
       fi; \
       sleep 30; \
       echo 'Fetching node IPs and updating /etc/hosts'; \
       export MASTER_IP=$(cat /config/master_ip); \
       export SLAVE01_IP=$(cat /config/slave01_ip); \
       echo $MASTER_IP master >> /etc/hosts; \
       echo $SLAVE01_IP slave01 >> /etc/hosts; \
       chmod +x /opt/sparkRapidsPlugin/getGpusResources.sh; \
       echo 'Updated /etc/hosts'; \
       echo 'awaiting for master to start'; \
       tail -f /dev/null; "
    ]
