Deployments/solo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: solo
  labels:
    k8s-app: pytorch
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: nvidia.com/gpu.product
            operator: In
            values:
            - NVIDIA-A100-SXM4-80GB
  # nodeSelector:
  #   topology.kubernetes.io/region: us-west
  #   topology.kubernetes.io/zone: fullerton
  volumes:
  - name: config-volume
    persistentVolumeClaim:
      claimName: datasets-pvc
  containers:
  - name: solo
    image: "gitlab-registry.nrp-nautilus.io/focegueda/calm-vit-dte/sparktorchkafka:latest"
    resources:
      limits:
        memory: 16Gi
        cpu: 8000m
        nvidia.com/a100: 1
      requests:
        memory: 16Gi
        cpu: 8000m
        nvidia.com/a100: 1
    volumeMounts:
    - name: config-volume
      mountPath: /config
    command: ["bash", "-c"]
    args: [
      "apt-get install unzip -y; \
       apt-get install zip -y; \
       apt-get install libxcb-xinerama0 -y; \
       apt install libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0 libxcb-xkb1 libxkbcommon-x11-0 -y; \
       echo \"export QT_DEBUG_PLUGINS=1\" >> /root/.bashrc; \
       echo \"export QT_QPA_PLATFORM_PLUGIN_PATH=/usr/local/miniconda3/lib/python3.12/site-packages/PyQt5/Qt5/plugins/platforms\" >> /root/.bashrc; \
       echo \"export KAGGLE_USERNAME=\" >> /root/.bashrc; \
       echo \"export KAGGLE_KEY=\" >> /root/.bashrc; \
       echo \"SPARK_CLASSPATH=$(find /usr/local/spark/jars -name '*.jar' | tr '\n' ':')\" >> /root/.bashrc; \
       echo 'SPARK_WORKER_PORT=7078' >> /root/.bashrc; \
       echo 'SPARK_WORKER_OPTS=\"-Dspark.worker.resource.gpu.amount=2 -Dspark.worker.resource.gpu.discoveryScript=/opt/sparkRapidsPlugin/getGpusResources.sh\"' >> /usr/local/spark/conf/spark-env.sh; \
       echo 'SPARK_WORKER_OPTS=\"-Dspark.worker.resource.gpu.amount=2 -Dspark.worker.resource.gpu.discoveryScript=/opt/sparkRapidsPlugin/getGpusResources.sh\"' >> /root/.bashrc; \
       echo \"SPARK_CLASSPATH=$(find /usr/local/spark/jars -name '*.jar' | tr '\n' ':')\" >> /root/.bashrc; \
       echo \"\" >> /root/.bashrc; \
       source /usr/local/miniconda3/bin/activate; \
       conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/main; \ 
       conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/r; \
       conda install seaborn -y; \
       conda install matplotlib -y; \
       conda install scikit-learn -y; \
       conda install pyqt -y; \
       conda install -c conda-forge kaggle -y; \
       conda install -c conda-forge pillow -y; \
       conda install -c conda-forge libxcb -y; \
       echo \"y\"| pip install pyqt5 py4j memory-profiler pyspark scipy torch torchvision torchaudio torcheval deepspeed pyspark[sql] pyspark[pandas_on_spark] pyspark[ml] pyspark[mllib]; \
       mkdir -p /config/Codebase; \
       echo 'Reloading bashrc'; \
       . /root/.bashrc; \
       . /etc/profile; \
       /usr/sbin/sshd; \
       echo 'Directories Set Up'; \
       chmod +x /opt/sparkRapidsPlugin/getGpusResources.sh; \
       echo 'solo' > /usr/local/spark/conf/workers; \
       ./usr/local/spark/sbin/start-all.sh --host solo --port 7077; \
       tail -f /dev/null;
       "
    ]
